--- a/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj
+++ b/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj
@@ -7,6 +7,7 @@
     <PackageProjectUrl>https://github.com/czf/Czf.ApiWrapper.Radiocom</PackageProjectUrl>
     <RepositoryUrl>https://github.com/czf/Czf.ApiWrapper.Radiocom</RepositoryUrl>
     <PackageTags>radio.com</PackageTags>
+  <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
