--- a/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj
+++ b/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -7,8 +7,14 @@
     <PackageProjectUrl>https://github.com/czf/Czf.ApiWrapper.Radiocom</PackageProjectUrl>
     <RepositoryUrl>https://github.com/czf/Czf.ApiWrapper.Radiocom</RepositoryUrl>
     <PackageTags>radio.com</PackageTags>
-  <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
   </PropertyGroup>
+
+	<PropertyGroup>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		
+	</PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile></DocumentationFile>
