Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,18 +15,18 @@ steps:
     displayName: restore
     inputs:
       command: 'restore'
-      projects: '/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
+      projects: 'czf/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
       feedsToUse: 'select'
   - task: DotNetCoreCLI@2
     displayName: build
     inputs:
       command: 'build'
-      projects: '/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
+      projects: 'czf/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
   - task: DotNetCoreCLI@2
     displayName: pack
     inputs:
       command: 'pack'
-      packagesToPack: '/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
+      packagesToPack: 'czf/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
       versioningScheme: 'off'
   - task: DotNetCoreCLI@2
     displayName: push
