Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     displayName: restore
     inputs:
       command: 'restore'
-      projects: 'czf/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
+      projects: '$(Build.Repository.LocalPath)/Czf.ApiWrapper.Radiocom/Czf.ApiWrapper.Radiocom.csproj'
       feedsToUse: 'select'
   - task: DotNetCoreCLI@2
     displayName: build
